# automatGame

./: .gitignore  CMakeLists.txt  README.md
src/: FigureModel.qml  main.cpp  main.qml  qml.qrc  state.cpp  state.h  statemashin.cpp  statemashin.h  stateprize.cpp  stateprize.h  staterotate.cpp  staterotate.h  statewait.cpp  statewait.h
